# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1458 2010-10-11 17:21:09 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.0.0 beta6 2010-??-??
 - 2010-10-11 Fixed bug#5921 - RedHat rc script does not ignore ".save" files
    when rebuilding the cron jobs.
 - 2010-10-11 Fixed bug#6040 - Remove ReplyAll option if possible.
 - 2010-10-07 Fixed bug#5994 - Creating new statistic, field validation kicks in immediately.
 - 2010-10-07 Fixed bug#5975 - Notifications (event-based) to external email
    address are visible to customers.

3.0.0 beta5 2010-10-11
 - 2010-10-04 Fixed bug#6064 - Predefined responses does not work.
 - 2010-10-01 Big improvements to TicketZoom rendering performance.
 - 2010-09-30 Fixed bug#6054 - The default services are not loaded when creating a new ticket.
 - 2010-09-30 Fixed bug#5911 - Enhance menu behavior.
    The submenus in the agent main menu open on click by default. With the new
    config "OpenMainMenuOnHover" setting it can be specified that they should
    also open on mouse hover.
 - 2010-09-30 Updated Ukrainian translation file, thanks to Бельский Артем!
 - 2010-09-30 Fixed bug#5979 - IE8 - articles for a ticket doesn't switch
 - 2010-09-29 Fixed bug#6017 - QueueLookup function returns wrong QueueID if a
    queue name was updated.
 - 2010-09-29 Fixed bug#6019 - Choosing a search template does nothing.
 - 2010-09-29 Fixed bug#6033 - Too many toolbar icons shown by default.
    Toolbar shortcuts are not shown by default.
    Toolbar items for tickets (such as locked tickets) are only shown if
    they have active tickets.
 - 2010-09-29 Fixed bug#6032 - Customer History context settings not working.
 - 2010-09-28 Fixed bug#6021 - Ticket Types are still displayed if they're invalid.