@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <otrs_config version="1.0" init="Application">
-    <CVS>$Id: Ticket.xml,v 1.395 2010-10-11 08:58:29 mb Exp $</CVS>
+    <CVS>$Id: Ticket.xml,v 1.396 2010-10-12 13:59:21 martin Exp $</CVS>
     <ConfigItem Name="Ticket::Hook" Required="1" Valid="1">
         <Description Translatable="1">The identifier for a ticket, e.g. Ticket#, Call#, MyTicket#. The default is Ticket#.</Description>
         <Group>Ticket</Group>
@@ -1383,6 +1383,17 @@
             <Hash>
                 <Item Key="Module">Kernel::System::Ticket::Event::ForceUnlock</Item>
                 <Item Key="Event">TicketQueueUpdate</Item>
+            </Hash>
+        </Setting>
+    </ConfigItem>
+    <ConfigItem Name="Ticket::EventModulePost###920-TicketArticleNewMessageUpdate" Required="0" Valid="1">
+        <Description Translatable="1">Update Ticket "Seen" flag if every article got seen or a new Article got created.</Description>
+        <Group>Ticket</Group>
+        <SubGroup>Core::Ticket</SubGroup>
+        <Setting>
+            <Hash>
+                <Item Key="Module">Kernel::System::Ticket::Event::TicketNewMessageUpdate</Item>
+                <Item Key="Event">(ArticleCreate|ArticleFlagSet)</Item>
             </Hash>
         </Setting>
     </ConfigItem>
