@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1458 2010-10-11 17:21:09 martin Exp $
+# $Id: CHANGES,v 1.1459 2010-10-12 13:59:22 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 3.0.0 beta6 2010-??-??
+ - 2010-10-11 Fixed bug#6079 - Unread tickets does mark as readed only second time.
  - 2010-10-11 Fixed bug#5921 - RedHat rc script does not ignore ".save" files
     when rebuilding the cron jobs.
  - 2010-10-11 Fixed bug#6040 - Remove ReplyAll option if possible.
